--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "chess.js": "^1.0.0-beta.8",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
     "react": "^19.2.0",
+    "react-chessboard": "^4.6.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
