--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mysql2": "^3.15.3",
     "react": "^19.2.0",
     "react-chessboard": "^4.7.3",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
